Fixes uneven spacing for info banner text [skip ci]

--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -2481,6 +2481,7 @@ $booking-left-margin: 2rem;
     div > img,
     div > a > img, {
         border-radius: 2px;
+        margin-bottom: .5rem;
     }
 
     a {
